css/ppp.css
/* //Global rules */
:root {
   --paddingA: 60px;
}
* {
   margin: 0;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
}
body {
   font-family: "Playfair Display", serif;
   font-family: "Cairo", sans-serif;
}
/* //Global rules */
/* SPECIAL HEADER */
.special {
   font: 900 5rem arial, sans-serif;
   letter-spacing: -5px;
   color: #ddd;
   line-height: 0.65;
   margin: 0 auto;
   text-align: center;
}
.special + q {
   display: block;
   color: #777;
   margin: 0 auto 40px;
   text-align: center;
}
/* SPECIAL HEADER */
/* CONTAINER */
.container {
   max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
}
@media (max-width: 767px) {
   .container {
      max-width: 720px;
   }
}
@media (max-width: 991px) {
   .container {
      max-width: 940px;
      padding: 0 30px;
   }
}
/* CONTAINER */
/* //HEADER */
header {
   padding-top: var(--paddingA);
   padding-bottom: var(--paddingA);
   position: relative;
}
header::before {
   content: "";
   position: absolute;
   top: -250px;
   left: 0;
   background-image: linear-gradient(
      to right top,
      #000000,
      #000000,
      #000000,
      #010000,
      #010000,
      #111010,
      #1b1a1b,
      #242424,
      #3b3b3b,
      #535353,
      #6d6d6d,
      #888888
   );
   width: 100%;
   height: 700px;
   z-index: -1;
   transform: skewY(-20deg);
   box-shadow: 0 1px 8px #000;
}
header > .container > .special {
   line-height: 0.66;
}
header figcaption {
   display: flex;
   align-items: center;
}
header figcaption img {
   z-index: 1;
   flex: 0 8 50%;
   max-width: 500px;
   box-shadow: 0 1px 8px #000;
}
header figcaption .text {
   flex: 4 1 100%;
   background-color: white;
   box-shadow: 0px 1px 5px #ccc;
}
header figcaption .text {
   line-height: 1.5;
   font-size: 1.2rem;
   text-align: left;
   color: #666;
   padding: 25px;
}
header figcaption .text .icons {
   text-align: right;
   padding: 5px;
}
header figcaption .text .icons i {
   font-size: 2em;
   color: black;
   margin: 10px;
}
header figcaption .text .icons i:hover {
   color: violet;
}
@media (max-width: 1000px) {
   header figcaption {
      display: block;
   }
   header figcaption img {
      float: left;
      max-width: 400px;
      margin-top: -50px;
      margin-right: 20px;
      box-shadow: 0 0 10px black;
   }
   header figcaption .text {
      margin: 50px;
      margin-top: 100px;
      padding-left: 50px;
      padding-right: 50px;
   }
}
@media (max-width: 767px) {
   header figcaption {
      display: flex;
      flex-direction: column;
   }
   header figcaption img {
      max-width: 400px;
      margin: 20px;
   }
   header figcaption .text {
      margin: 30px;
      padding: 50px;
   }
}
/* //HEADER */
/* //MAIN */
main {
   padding-bottom: var(--paddingA);
}
main section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 40px;
}
main section .box {
   box-shadow: 0px 0px 5px 1px #aaa;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: start;
}
main section .box:hover {
   box-shadow: 0px 0px 5px 2px #888;
}
main section .box .image {
   align-self: center;
   width: 300px;
   height: 200px;
   overflow: hidden;
   margin: 20px;
   box-shadow: 0px 0px 5px #ccc;
   position: relative;
}
main section .box .image::before {
   content: "";
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.281);
   transition: 0.2s;
   z-index: 1;
}
main section .box .image:hover::before {
   height: 0%;
   width: 0%;
}
main section .box .image img {
   max-width: 100%;
   transition: 0.6s;
}
main section .box .image:hover img {
   transform: scale(1.5);
}
main section .box .info {
   margin: 20px;
}
main section .box .info .title {
   display: flex;
   justify-content: space-between;
   padding-bottom: 20px;
}
main section .box .info .title h3 {
   font-family: "Playfair Display", serif;
   font-size: 1.3rem;
}
main section .box .info .title i {
   font-size: 1.5rem;
   padding-left: 10px;
   color: black;
}
main section .box .info .title i:hover {
   color: violet;
}
main section .box .info p {
   line-height: 1.5;
   font-family: "Roboto Flex", sans-serif;
   font-size: 1.1rem;
   color: #777;
}
/* //MAIN */
/* //FOOTER */
footer {
   padding-top: var(--paddingA);
   padding-bottom: var(--paddingA);
   background-image: linear-gradient(
      to left top,
      #ffffff,
      #e0e0e0,
      #c2c2c2,
      #c2c2c2,
      #888888,
      #737373,
      #5f5f5f,
      #4b4b4b,
      #393939,
      #393939,
      #171717,
      #171717,
      #171717,
      #171717,
      #000000,
      #000000,
      #000000
   );
}
footer .holder {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 20px;
   padding: 20px;
}
footer .holder .info {
   color: white;
}
footer .holder .info p {
   font-size: 1.3rem;
   padding: 20px;
   line-height: 1.5;
}
footer .holder .info > div {
   font-size: 1.5rem;
   padding: 0px 15px;
   line-height: 1.5;
}
footer .holder .info .icons {
   padding: 20px;
}
footer .holder .info .icons i {
   margin-right: 15px;
   color: white;
}
footer .holder .info .icons i:hover {
   color: violet;
}
@media (max-width: 777px) {
   footer .holder .info .icons {
      text-align: center;
   }
}
footer .holder .image img {
   width: 100%;
}
/* //FOOTER */

